--- a/.github/workflows/protoc.yaml
+++ b/.github/workflows/protoc.yaml
@@ -16,7 +16,7 @@ jobs:
         with:
           go-version: 1.23
       - uses: actions/checkout@v4
-      - name: Etract Release Version
+      - name: Extract Release Version
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
       - name: "Generate for Golang"
         shell: bash
