--- a/.github/workflows/protoc.yaml
+++ b/.github/workflows/protoc.yaml
@@ -11,11 +11,11 @@ jobs:
       matrix:
         service: ["order", "payment", "shipping"]
     steps:
+      - uses: actions/checkout@v4
       - name: Install Go
         uses: actions/setup-go@v5
         with:
-          go-version: 1.23
-      - uses: actions/checkout@v4
+          go-version: '1.23'
       - name: Extract Release Version
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
       - name: "Generate for Golang"
